# SentinelMesh

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  BACKEND.md  COC.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRONTEND.md  LICENSE  Makefile  OVERVIEW.md  README.md  SECURITY.md  SUPPORT.md  VISION.md  ai_agent_example.py  docker-compose.yml  log_sender.py  package-lock.json  pyproject.toml  render.yaml  send_log_example.py  setup.py  snend_log_example.py  tailwind.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.pypi-env/: pyvenv.cfg
backend/: .flake8  Dockerfile  auth.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  sqlite.py  storage.py
backend/routers/: auth.py  logs.py  stats.py  users.py
backend/rules/: blocklist.yaml  rule_engine.py  rules.yaml
backend/tests/: test_main.py  test_rule_engine.py
dashboard/: Dockerfile  app.py  remote_dashboard.py
docs/: badges.md  index.html
frontend/sentinelmesh-dashboard/: .eslintrc.js  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/sentinelmesh-dashboard/src/: AdvancedAnalytics.jsx  AgentsPage.jsx  AlertsPage.jsx  App.css  App.jsx  AuthContext.jsx  DashboardGrid.jsx  Login.jsx  LogsPage.jsx  Register.jsx  RiskPage.jsx  index.css  main.jsx
frontend/sentinelmesh-dashboard/src/components/: AnimatedBackground.jsx  AnimatedCounter.jsx  CommandPalette.jsx  DataTable.jsx  FloatingActionButton.jsx  LoadingSpinner.jsx  MobileHeader.jsx  NotificationCenter.jsx  ParticleText.jsx  Sidebar.jsx  StatusIndicator.jsx
frontend/sentinelmesh-dashboard/src/hooks/: useAutoRefreshToggle.js  useLayoutPersistence.js  useLogsData.js  useMobileDetection.js  useNotificationsToggle.js  useTheme.js
frontend/sentinelmesh-dashboard/src/lib/: api.js  userApi.js
frontend/sentinelmesh-dashboard/src/pages/: DashboardPage.jsx  ProfilePage.jsx  UsersPage.jsx
frontend/sentinelmesh-dashboard/src/widgets/: AgentsWidget.jsx  AlertsWidget.jsx  ChartWidget.jsx  LogsWidget.jsx  StatsWidget.jsx
sentinelmesh/: README.md
sentinelmesh/cli/: sentinel_cli.py
sentinelmesh/config/: webhook.yaml
sentinelmesh/monitor/: agent_tracker.py  mcp_sniffer.py
sentinelmesh/tools/: replay_log.py
tests/: test_blocklist.py  test_risk_score_range.py  test_rule_engine.py
